--- a/src/app/modules/competitions/directions/directions.component.html
+++ b/src/app/modules/competitions/directions/directions.component.html
@@ -1,4 +1,8 @@
-<ng-container *ngFor="let d of directions">
-  <h2>{{d.mean.name}}</h2>
-  <html-viewer [content]="d.directions"></html-viewer>
-</ng-container>
+<div fxLayout fxLayoutAlign="center">
+  <div fxFlex.lt-md="90%" fxLayout="column" *ngIf="directions">
+    <ng-container *ngFor="let d of directions">
+      <h2>{{d.mean.name}}</h2>
+      <html-viewer [content]="d.directions"></html-viewer>
+    </ng-container>
+  </div>
+</div>
