--- a/src/app/modules/competitions/competition/competition.component.html
+++ b/src/app/modules/competitions/competition/competition.component.html
@@ -1,25 +1,27 @@
-<div class="general-container" fxLayout fxLayoutAlign="center">
-  <div fxFlex="80%" fxFlex.xs="100%" fxLayout="column" *ngIf="competition && registration">
-    <div fxLayout="row" fxLayoutAlign="start center">
-      <h1 fxFlex="noshrink">{{competition.name}}</h1>
-      <span fxFlex="grow"></span>
-      <a mat-icon-button routerLink="./edit">
-        <fa-icon icon="edit"></fa-icon>
-      </a>
+<div fxLayout="row" fxLayoutAlign="center">
+    <div fxFlex.gt-sm="80%" fxFlex.lt-md="100%" fxLayout="column" *ngIf="competition && registration">
+        <h1 ngClass.lt-md="h1xs">{{competition.name}}</h1>
+        <mat-tab-group>
+            <mat-tab label="Generale">
+                <ng-template matTabContent>
+                    <general-info [competition]="competition" [registration]="registration"></general-info>
+                </ng-template>
+            </mat-tab>
+            <mat-tab label="Registrazione">
+                <ng-template matTabContent>
+                    <registration-info [competitionId]="compId" [registration]="registration"></registration-info>
+                </ng-template>
+            </mat-tab>
+            <mat-tab label="Programma" *ngIf="schedule">
+                <ng-template matTabContent>
+                    <schedule-info [schedule]="schedule"></schedule-info>
+                </ng-template>
+            </mat-tab>
+            <mat-tab label="Indicazioni" *ngIf="directions">
+                <ng-template matTabContent>
+                    <directions-info [directions]="directions"></directions-info>
+                </ng-template>
+            </mat-tab>
+        </mat-tab-group>
     </div>
-    <mat-tab-group color="accent" [selectedIndex]="2">
-      <mat-tab label="Generale">
-        <general-info [competition]="competition" [registration]="registration"></general-info>
-      </mat-tab>
-      <mat-tab label="Programma">
-        <schedule-info *ngIf="schedule" [schedule]="schedule"></schedule-info>
-      </mat-tab>
-      <mat-tab label="Registrazione">
-        <registration-info *ngIf="registration" [competitionId]="competition.id" [registration]="registration"></registration-info>
-      </mat-tab>
-      <mat-tab label="Indicazioni" *ngIf="directions">
-        <directions-info [directions]="directions"></directions-info>
-      </mat-tab>
-    </mat-tab-group>
-  </div>
 </div>
