--- a/src/app/modules/competitions/general/general.component.html
+++ b/src/app/modules/competitions/general/general.component.html
@@ -1,127 +1,127 @@
-<div class="general-container" fxLayout="row" fxLayoutGap="2%" *ngIf="competition">
-  <div fxLayout="column" fxFlex="49%">
-    <table>
-      <tr>
-        <th>Data</th>
-        <td>{{competition.getCompDate()}}</td>
-      </tr>
-      <tr>
-        <th>Città</th>
-        <td>{{competition.city}} <ng-container *ngIf="competition.province">({{competition.province}})</ng-container>
-        </td>
-      </tr>
-      <tr *ngIf="competition.country !== 'Italia'">
-        <th>Nazione</th>
-        <td>{{competition.country}}</td>
-      </tr>
-      <tr>
-        <th>Location</th>
-        <td *ngIf="competition.locationURL"><a href="{{competition.locationURL}}">{{competition.location}}</a></td>
-        <td *ngIf="!competition.locationURL">{{competition.location}}</td>
-      </tr>
-      <tr>
-        <th>Indirizzo</th>
-        <td><a href="{{competition.addressURL}}">{{competition.address}}</a></td>
-      </tr>
-      <tr *ngIf="competition.locationDetails">
-        <th>Dettagli</th>
-        <td>{{competition.locationDetails}}</td>
-      </tr>
-      <tr>
-        <th>Contatti</th>
-        <td><a href="mailto:{{competition.contactEmail}}">{{competition.contactName}}</a>
-        </td>
-      </tr>
-      <tr>
-        <th>Limite partecipanti</th>
-        <td>{{registration.competitorsLimit}} concorrenti</td>
-      </tr>
-      <tr>
-        <th>Costo di iscrizione</th>
-        <td>
-          <ng-container *ngIf="!registration.isRegistrationPaid">Gratuito</ng-container>
-          <ng-container *ngIf="registration.isRegistrationPaid">{{registration.registrationFee}}€</ng-container>
-        </td>
-      </tr>
-      <tr>
-        <th>Pagina WCA</th>
-        <td><a href="https://worldcubeassociation.org/competitions/{{competition.id}}"
-            target="blank">{{competition.name}}</a></td>
-      </tr>
-      <tr>
-        <th>Eventi</th>
-        <td>
-          <ng-container *ngFor="let e of competition.events"><span class="cubing-icon event-{{e.id}}"></span>&nbsp;
-          </ng-container>
-        </td>
-      </tr>
-    </table>
+<div fxLayout fxLayoutAlign="center">
+  <div fxFlex.lt-md="90%" fxFlex.gt-xs="100%" fxLayout="row" fxLayout.lt-md="column" fxLayoutGap-gt-sm="2%" class="gencontainer">
+    <div fxFlex.gt-sm="49%">
+      <table>
+        <tr>
+          <th>Data</th>
+          <td>{{competition.getCompDate()}}</td>
+        </tr>
+        <tr>
+          <th>Città</th>
+          <td>{{competition.city}} <ng-container *ngIf="competition.province">({{competition.province}})</ng-container>
+          </td>
+        </tr>
+        <tr *ngIf="competition.country !== 'Italia'">
+          <th>Nazione</th>
+          <td>{{competition.country}}</td>
+        </tr>
+        <tr>
+          <th>Location</th>
+          <td *ngIf="competition.locationURL"><a href="{{competition.locationURL}}">{{competition.location}}</a></td>
+          <td *ngIf="!competition.locationURL">{{competition.location}}</td>
+        </tr>
+        <tr>
+          <th>Indirizzo</th>
+          <td><a href="{{competition.addressURL}}">{{competition.address}}</a></td>
+        </tr>
+        <tr *ngIf="competition.locationDetails">
+          <th>Dettagli</th>
+          <td>{{competition.locationDetails}}</td>
+        </tr>
+        <tr>
+          <th>Contatti</th>
+          <td><a href="mailto:{{competition.contactEmail}}">{{competition.contactName}}</a>
+          </td>
+        </tr>
+        <tr>
+          <th>Limite partecipanti</th>
+          <td>{{registration.competitorsLimit}} concorrenti</td>
+        </tr>
+        <tr>
+          <th>Costo di iscrizione</th>
+          <td>
+            <ng-container *ngIf="!registration.isRegistrationPaid">Gratuito</ng-container>
+            <ng-container *ngIf="registration.isRegistrationPaid">{{registration.registrationFee}}€</ng-container>
+          </td>
+        </tr>
+        <tr>
+          <th>Pagina WCA</th>
+          <td><a href="https://worldcubeassociation.org/competitions/{{competition.id}}"
+              target="blank">{{competition.name}}</a></td>
+        </tr>
+        <tr>
+          <th>Eventi</th>
+          <td>
+            <ng-container *ngFor="let e of competition.events"><span class="cubing-icon event-{{e.id}}"></span>&nbsp;
+            </ng-container>
+          </td>
+        </tr>
+      </table>
 
-    <div>
-      <h2>Come posso partecipare?</h2>
-      <ul>
-        <li>Per competere è necessario iscriversi. <a href="">In questa pagina</a> è spiegata la procedura.</li>
-        <li>I partecipanti alla prima competizione devono portare un documento di riconoscimento.</li>
-        <li *ngIf="registration.maxNumberOfGuests">I partecipanti dovrebbero portare al massimo
-          {{registration.maxNumberOfGuests}}
-          accompagnatori.</li>
-      </ul>
+      <div>
+        <h2>Come posso partecipare?</h2>
+        <ul>
+          <li>Per competere è necessario iscriversi. <a href="">In questa pagina</a> è spiegata la procedura.</li>
+          <li>I partecipanti alla prima competizione devono portare un documento di riconoscimento.</li>
+          <li *ngIf="registration.maxNumberOfGuests">I partecipanti dovrebbero portare al massimo
+            {{registration.maxNumberOfGuests}}
+            accompagnatori.</li>
+        </ul>
+      </div>
+
+      <div>
+        <h2>Come posso assistere?</h2>
+        <ul>
+          <li *ngIf="!registration.guestsPay">L'accesso per gli spettatori è gratuito.</li>
+          <li *ngIf="registration.guestsPay">L'accesso per gli spettatori ha un costo di {{registration.guestsFee}}€.
+          </li>
+          <li *ngIf="!registration.guestsNeedToRegister">Gli spettatori <strong>non</strong> devono registrarsi.</li>
+          <li *ngIf="registration.guestsNeedToRegister">Gli spettatori devono registrarsi.</li>
+          <li *ngIf="registration.guestsDetails">{{registration.guestsDetails}}</li>
+        </ul>
+      </div>
+
+
     </div>
+    <div fxFlex.gt-sm="49%">
+      <div fxLayout fxLayoutAlign="center center">
+        <img *ngIf="competition.logoURL" style="height: 250px;" src="{{competition.logoURL}}" />
+        <img *ngIf="!competition.logoURL" style="height: 250px;" src="/assets/images/logo_condivisione_quadrato.png" />
+      </div>
 
-    <div>
-      <h2>Come posso assistere?</h2>
-      <ul>
-        <li *ngIf="!registration.guestsPay">L'accesso per gli spettatori è gratuito.</li>
-        <li *ngIf="registration.guestsPay">L'accesso per gli spettatori ha un costo di {{registration.guestsFee}}€.</li>
-        <li *ngIf="!registration.guestsNeedToRegister">Gli spettatori <strong>non</strong> devono registrarsi.</li>
-        <li *ngIf="registration.guestsNeedToRegister">Gli spettatori devono registrarsi.</li>
-        <li *ngIf="registration.guestsDetails">{{registration.guestsDetails}}</li>
-      </ul>
+      <div fxLayout="column">
+        <a class="regopen" *ngIf="!isRegistrationOpen && !isRegistrationStarted">Le iscrizioni apriranno il
+          {{registration.registrationOpen |compDate}}!</a>
+        <ng-container *ngIf="isRegistrationOpen && isRegistrationStarted">
+          <a class="regopen" *ngIf="!registration.isLimitReached">Le iscrizioni sono aperte, clicca qui per scoprire
+            come registrarti!</a>
+          <a class="regopen" *ngIf="registration.isLimitReached">Il limite partecipanti è stato raggiunto, ma le
+            iscrizioni sono aperte.
+            Clicca qui per scoprire come essere aggiunto alla lista d'attesa!</a>
+        </ng-container>
+        <a class="regopen" *ngIf="!isRegistrationOpen && isRegistrationStarted">Le iscrizioni alla competizione sono
+          chiuse e non è più possibile registrarsi.</a>
+        <a class="regopen" href="https://www.worldcubeassociation.org/regulations/" target="blank">Ricordati di leggere
+          il regolamento WCA, clicca qui!</a>
+      </div>
+
+      <table *ngIf="competition.extraInformation">
+        <tr>
+          <th>Delegati WCA</th>
+          <td [innerHtml]="getPeople(true)"></td>
+        </tr>
+        <tr>
+          <th>Organizzatori</th>
+          <td [innerHtml]="getPeople(false)"></td>
+        </tr>
+        <tr>
+          <th>Informazioni aggiuntive</th>
+          <td>{{competition.extraInformation}}</td>
+        </tr>
+      </table>
+
+
+
     </div>
-
   </div>
-  <div fxLayout="column" fxFlex="49%">
-
-    <div fxLayout fxLayoutAlign="center center">
-      <img *ngIf="competition.logoURL" style="height: 250px;" src="{{competition.logoURL}}" />
-      <img *ngIf="!competition.logoURL" style="height: 250px;" src="/assets/images/logo_condivisione_quadrato.png" />
-    </div>
-
-
-    <div *ngIf="!isRegistrationOpen && !isRegistrationStarted">
-      <p class="regopen">Le iscrizioni apriranno il {{registration.registrationOpen |compDate}}!</p>
-    </div>
-    <div *ngIf="!isLimitReached && isRegistrationOpen && isRegistrationStarted">
-      <a class="regopen" mat-raised-button color="primary">Le iscrizioni sono aperte, clicca qui per scoprire come registrarti!</a>
-    </div>
-    <div *ngIf="isLimitReached && isRegistrationOpen && isRegistrationStarted">
-      <a class="regopen" mat-raised-button color="primary">Il limite partecipanti è stato raggiunto, ma le iscrizioni sono aperte.
-        Clicca qui per scoprire
-        come essere aggiunto alla lista d'attesa!</a>
-    </div>
-    <div *ngIf="!isRegistrationOpen && isRegistrationStarted">
-      <p class="regopen">Le iscrizioni alla competizione sono chiuse e non è più possibile registrarsi</p>
-    </div>
-    -->
-    <div>
-      <a mat-raised-button href="https://www.worldcubeassociation.org/regulations/" color="primary" target="blank"
-        class="regulation">Ricordati di leggere il regolamento WCA, clicca qui!</a>
-    </div>
-
-    <table *ngIf="competition.extraInformation">
-      <tr>
-        <th>Delegati WCA</th>
-        <td [innerHtml]="getPeople(true)"></td>
-      </tr>
-      <tr>
-        <th>Organizzatori</th>
-        <td [innerHtml]="getPeople(false)"></td>
-      </tr>
-      <tr>
-        <th>Informazioni aggiuntive</th>
-        <td>{{competition.extraInformation}}</td>
-      </tr>
-    </table>
-  </div>
-
 </div>
