--- a/src/app/modules/competitions/registration/registration.component.css
+++ b/src/app/modules/competitions/registration/registration.component.css
@@ -1,22 +1,25 @@
-.general-container {
-    padding:20px 10px 10px 10px;
-}
-
-table{
-    font-size: 16px;
-}
-
 p{
     margin-bottom: 0px;
     margin-top:7px;
 }
 
-th{
-    text-align: left;
-    flex: 1 0 auto;
+h3{
+    margin-bottom: 0px;    
 }
 
-td{
-    flex: 1 1 100%;
-    padding-left: 10px;
+h2{
+    margin-bottom:0px;
+}
+
+li{
+    margin-top:5px;
+    margin-bottom: 0px;
+}
+
+ul{
+    margin-bottom:0px;
+}
+
+.regcontainer p,li{
+    text-align: justify;
 }
