--- a/src/app/modules/competitions/general/general.component.html
+++ b/src/app/modules/competitions/general/general.component.html
@@ -1,5 +1,6 @@
 <div fxLayout fxLayoutAlign="center">
-  <div fxFlex.lt-md="90%" fxFlex.gt-xs="100%" fxLayout="row" fxLayout.lt-md="column" fxLayoutGap-gt-sm="2%" class="gencontainer">
+  <div fxFlex.lt-md="90%" fxFlex.gt-xs="100%" fxLayout="row" fxLayout.lt-md="column" fxLayoutGap-gt-sm="2%"
+    class="gencontainer" fxLayoutGap.gt-sm="2%">
     <div fxFlex.gt-sm="49%">
       <table>
         <tr>
