--- a/src/app/modules/competitions/competition/competition.component.html
+++ b/src/app/modules/competitions/competition/competition.component.html
@@ -1,27 +1,25 @@
-<div fxLayout="row" fxLayoutAlign="center">
-    <div fxFlex.gt-sm="80%" fxFlex.lt-md="100%" fxLayout="column" *ngIf="competition && registration">
-        <h1 ngClass.lt-md="h1xs">{{competition.name}}</h1>
-        <mat-tab-group>
-            <mat-tab label="Generale">
-                <ng-template matTabContent>
-                    <general-info [competition]="competition" [registration]="registration"></general-info>
-                </ng-template>
-            </mat-tab>
-            <mat-tab label="Registrazione">
-                <ng-template matTabContent>
-                    <registration-info [competitionId]="compId" [registration]="registration"></registration-info>
-                </ng-template>
-            </mat-tab>
-            <mat-tab label="Programma" *ngIf="schedule">
-                <ng-template matTabContent>
-                    <schedule-info [schedule]="schedule"></schedule-info>
-                </ng-template>
-            </mat-tab>
-            <mat-tab label="Indicazioni" *ngIf="directions">
-                <ng-template matTabContent>
-                    <directions-info [directions]="directions"></directions-info>
-                </ng-template>
-            </mat-tab>
-        </mat-tab-group>
-    </div>
+<div fxLayout fxLayoutAlign="center">
+  <div fxFlex.gt-sm="80%" fxFlex.lt-md="100%" *ngIf="competition && registration && schedule">
+    <h1 ngClass.lt-md="h1xs" ngCLass.gt-sm="h1md">{{competition.name}}</h1>
+    <mat-tab-group>
+      <mat-tab label="Generale">
+        <ng-template matTabContent>
+          <general-info [competition]="competition" [registration]="registration"></general-info>
+        </ng-template>
+      </mat-tab>
+      <mat-tab label="Registrazione">
+        <ng-template matTabContent>
+          <registration-info [registration]="registration"></registration-info>
+        </ng-template>
+      </mat-tab>
+      <mat-tab label="Programma" *ngIf="schedule">
+          <schedule-info [schedule]="schedule"></schedule-info>
+      </mat-tab>
+      <mat-tab label="Indicazioni" *ngIf="directions">
+        <ng-template matTabContent>
+          <directions-info [directions]="directions"></directions-info>
+        </ng-template>
+      </mat-tab>
+    </mat-tab-group>
+  </div>
 </div>
