--- a/src/app/modules/competitions/directions/directions.component.html
+++ b/src/app/modules/competitions/directions/directions.component.html
@@ -1,5 +1,5 @@
 <div fxLayout fxLayoutAlign="center">
-  <div fxFlex.lt-md="90%" fxLayout="column" *ngIf="directions">
+  <div fxFlex.lt-md="90%" fxFlex.gt-sm="100%" fxLayout="column" *ngIf="directions">
     <ng-container *ngFor="let d of directions">
       <h2>{{d.mean.name}}</h2>
       <html-viewer [content]="d.directions"></html-viewer>
