--- a/src/app/modules/competition-edit/edit/edit.component.html
+++ b/src/app/modules/competition-edit/edit/edit.component.html
@@ -2,22 +2,16 @@
   <div fxFlex.gt-sm="80%" fxFlex.lt-md="100%" *ngIf="competition && registration && directions && schedule">
     <h1 ngClass.lt-md="h1xs">{{competition.name}} <fa-icon icon="check" style="color:green" *ngIf="updated"></fa-icon>
     </h1>
-    <mat-tab-group [selectedIndex]="initialTab">
+    <mat-tab-group [selectedIndex]="initialTab" (selectedIndexChange)="updateURL($event)">
       <mat-tab label="Generale">
-        <ng-template matTabContent>
-          <edit-general-info (updated)="updated=$event" [(competition)]="competition"></edit-general-info>
-        </ng-template>
+        <edit-general-info (updated)="updated=$event" [(competition)]="competition"></edit-general-info>
       </mat-tab>
       <mat-tab label="Registrazione">
-        <ng-template matTabContent>
-          <edit-registration-info (updated)="updated=$event" [(registration)]="registration"
-            [competition]="competition"></edit-registration-info>
-        </ng-template>
+        <edit-registration-info (updated)="updated=$event" [(registration)]="registration" [competition]="competition">
+        </edit-registration-info>
       </mat-tab>
       <mat-tab label="Schedule">
-        <ng-template matTabContent>
-          <edit-schedule-info [competitionId]="competition.id"></edit-schedule-info>
-        </ng-template>
+        <edit-schedule-info [competitionId]="competition.id"></edit-schedule-info>
       </mat-tab>
       <mat-tab label="Indicazioni">
         <edit-directions-info (updated)="updated=$event" [(directions)]="directions" [competition]="competition">
