--- a/src/app/modules/competition-edit/manage-competition/manage-competition.component.html
+++ b/src/app/modules/competition-edit/manage-competition/manage-competition.component.html
@@ -13,5 +13,8 @@
     <div>
       <button mat-raised-button color="warn" (click)="deleteCompetition()">Elimina Competizione</button>
     </div>
+    <div>
+      <a mat-raised-button color="accent" routerLink="/competizioni/{{competition.id}}">Visualizza Competizione</a>
+    </div>
   </div>
 </div>
