--- a/src/app/modules/competitions/official/official.component.css
+++ b/src/app/modules/competitions/official/official.component.css
@@ -1,3 +1,54 @@
-.officialcontainer{
-    margin-top:20px;
+table {
+    width:100%;
+    margin-top:10px;
+}
+
+table, tr, thead{
+    border-collapse: collapse;
+}
+
+.odd,thead{
+    background-color: #fff;
+}
+
+.even{
+    background-color: #f2f2f2;
+}
+
+.even:hover,.odd:hover{
+    background-color:#d0d0d0;
+}
+
+td, th{
+    text-align: left;
+    padding-top:15px;
+    padding-bottom: 15px;
+    padding-left:15px;
+}
+
+.date{
+    width:170px;
+}
+
+h2{
+    margin-bottom: 0px;
+}
+
+img{
+    vertical-align: middle;
+    width: 25px;
+}
+
+.wca{
+    width: 35px;
+    align-content: center;
+}
+
+.location{
+    margin-left: 7px;
+    font-size: 15px;
+}
+
+.name{
+    width: 400px;
 }
