--- a/src/app/modules/homepage/competitions/competitions.component.html
+++ b/src/app/modules/homepage/competitions/competitions.component.html
@@ -4,8 +4,8 @@
     <ng-container *ngFor="let c of comp">
       <div fxLayout fxLayoutGap="20px" class="comp">
         <div fxLayout="column" class="compdate">
-          <span class="month">{{c.start_date | date:"MMM" | uppercase}}</span>
-          <span class="day">{{c.start_date | date:"dd"}}</span>
+          <span class="month">{{c.startDate | date:"MMM" | uppercase}}</span>
+          <span class="day">{{c.startDate | date:"dd"}}</span>
         </div>
         <div fxLayout="column">
           <h3> <a href="https://worldcubeassociation.org/competitions/{{c.id}}">{{c.name}}</a></h3>
@@ -18,11 +18,11 @@
 <ng-container *ngIf="comp$ | async as comp">
   <div fxLayout="column" *ngIf="comp.length > 0">
     <h2>Prossime competizioni</h2>
-    <ng-container *ngFor="let c of comp.slice().reverse()">
+    <ng-container *ngFor="let c of comp">
       <div fxLayout fxLayoutGap="20px" class="comp">
         <div fxLayout="column" class="compdate">
-          <span class="month">{{c.start_date | date:"MMM" | uppercase}}</span>
-          <span class="day">{{c.start_date | date:"dd"}}</span>
+          <span class="month">{{c.startDate | date:"MMM" | uppercase}}</span>
+          <span class="day">{{c.startDate | date:"dd"}}</span>
         </div>
         <div fxLayout="column">
           <h3> <a href="https://worldcubeassociation.org/competitions/{{c.id}}">{{c.name}}</a></h3>
