--- a/src/app/modules/competitions/official/official.component.html
+++ b/src/app/modules/competitions/official/official.component.html
@@ -3,66 +3,18 @@
     <div fxFlex.lt-md="100%" fxFlex.gt-sm="70%">
       <div *ngIf="inProgress && inProgress.length>0">
         <h2>Competizioni in corso</h2>
-        <table fxHide.lt-md class="mat-elevation-z1">
-          <thead>
-            <th></th>
-            <th>Data</th>
-            <th>Nome</th>
-            <th>Città</th>
-          </thead>
-          <tr *ngFor="let c of inProgress; let i = index" [ngClass]="(i%2)===0?'even':'odd'">
-            <td class="wca"><a href="https://www.worldcubeassociation.org/competitions/{{c.id}}" target="blank"><img
-                  src="/assets/images/wca.svg" /></a></td>
-            <td class="date">{{c.getCompDate()}}</td>
-            <td class="name"><a routerLink="./{{c.id}}">{{c.name}}</a></td>
-            <td><strong>{{c.city}}</strong>, {{c.country}}<a class="location"
-                href="https://maps.google.com/?q={{c.address}}" target="blank">
-                <fa-icon icon="external-link-alt"></fa-icon>
-              </a></td>
-          </tr>
-        </table>
+        <official-mobile-row fxHide.gt-sm *ngFor="let c of inProgress" [competition]="c"></official-mobile-row>
+        <desktop-official-table fxHide.lt-md [competitions]="inProgress"></desktop-official-table>
       </div>
       <div *ngIf="upcoming && upcoming.length>0">
         <h2>Competizioni future</h2>
-        <table fxHide.lt-md class="mat-elevation-z1">
-          <thead>
-            <th></th>
-            <th>Data</th>
-            <th>Nome</th>
-            <th>Città</th>
-          </thead>
-          <tr *ngFor="let c of upcoming; let i = index" [ngClass]="(i%2)===0?'even':'odd'">
-            <td class="wca"><a href="https://www.worldcubeassociation.org/competitions/{{c.id}}" target="blank"><img
-                  src="/assets/images/wca.svg" /></a></td>
-            <td class="date">{{c.getCompDate()}}</td>
-            <td class="name"><a routerLink="./{{c.id}}">{{c.name}}</a></td>
-            <td><strong>{{c.city}}</strong>, {{c.country}}<a class="location"
-                href="https://maps.google.com/?q={{c.address}}" target="blank">
-                <fa-icon icon="external-link-alt"></fa-icon>
-              </a></td>
-          </tr>
-        </table>
+        <official-mobile-row fxHide.gt-sm *ngFor="let c of upcoming" [competition]="c"></official-mobile-row>
+        <desktop-official-table fxHide.lt-md [competitions]="upcoming"></desktop-official-table>
       </div>
       <div *ngIf="past && past.length>0">
         <h2>Competizioni passate</h2>
-        <table fxHide.lt-md class="mat-elevation-z1">
-          <thead>
-            <th></th>
-            <th>Data</th>
-            <th>Nome</th>
-            <th>Città</th>
-          </thead>
-          <tr *ngFor="let c of past; let i = index" [ngClass]="(i%2)===0?'even':'odd'">
-            <td class="wca"><a href="https://www.worldcubeassociation.org/competitions/{{c.id}}" target="blank"><img
-                  src="/assets/images/wca.svg" /></a></td>
-            <td class="date">{{c.getCompDate()}}</td>
-            <td class="name"><a routerLink="./{{c.id}}">{{c.name}}</a></td>
-            <td><strong>{{c.city}}</strong>, {{c.country}}<a class="location"
-                href="https://maps.google.com/?q={{c.address}}" target="blank">
-                <fa-icon icon="external-link-alt"></fa-icon>
-              </a></td>
-          </tr>
-        </table>
+        <official-mobile-row fxHide.gt-sm *ngFor="let c of past" [competition]="c"></official-mobile-row>
+        <desktop-official-table fxHide.lt-md [competitions]="past"></desktop-official-table>
       </div>
     </div>
   </div>
