--- a/src/app/modules/competition-edit/edit/edit.component.html
+++ b/src/app/modules/competition-edit/edit/edit.component.html
@@ -10,7 +10,7 @@
         <edit-registration-info (updated)="updated=$event" [(registration)]="registration" [competition]="competition">
         </edit-registration-info>
       </mat-tab>
-      <mat-tab label="Schedule">
+      <mat-tab label="Schedule" *ngIf="(user$ | async)?.isDelOrgOf(competition)">
         <edit-schedule-info [competitionId]="competition.id"></edit-schedule-info>
       </mat-tab>
       <mat-tab label="Indicazioni">
